--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 16:05:04 2018</p>
+         Last Run: Tue Jul 24 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>17</td>
-                        <td>73</td>
-                        <td>1</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>14</td>
+                        <td>77</td>
+                        <td>1</td>
+                        <td>16</td>
                         <td>NNE</td>
                         <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
                         <td>15</td>
-                        <td>69</td>
+                        <td>15</td>
+                        <td>8</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NNE</td>
-                        <td>52</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>17</td>
-                        <td>76</td>
+                        <td>12</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>40</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,8 +106,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
-                 "16",
+                 "15",
+                 "15",
                  "14"
                ]
              },
@@ -117,8 +117,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
-                 "16",
+                 "15",
+                 "15",
                  "14"
                ]
              }
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "17",
-                 "15",
-                 "17"
+                 "14",
+                 "8",
+                 "12"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "69",
-                 "76"
+                 "77",
+                 "78",
+                 "77"
                ]
              },
              {
@@ -191,8 +191,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "59",
-                 "52",
-                 "40"
+                 "54",
+                 "44"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 16:05:04 2018</p>
+         Last Run: Tue Jul 24 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -231,15 +231,15 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>0</td>
-                        <td>42</td>
+                        <td>1</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -247,7 +247,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -259,7 +259,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -270,8 +270,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>35</td>
-                        <td>55</td>
+                        <td>38</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -282,8 +282,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>36</td>
-                        <td>67</td>
+                        <td>40</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -403,11 +403,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "15",
-                 "35",
-                 "36"
+                 "38",
+                 "40"
                ]
              },
              {
@@ -415,11 +415,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
                  "43",
-                 "47",
-                 "55",
-                 "67"
+                 "44",
+                 "48",
+                 "56",
+                 "69"
                ]
              },
              {
@@ -427,7 +427,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
+                 "30",
                  "29",
                  "55",
                  "50",
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 16:05:04 2018</p>
+         Last Run: Tue Jul 24 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -487,9 +487,9 @@
                         <td>0</td>
                         <td>38</td>
                         <td>5</td>
-                        <td>8</td>
-                        <td>NNW</td>
-                        <td>18</td>
+                        <td>10</td>
+                        <td>NW</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -499,9 +499,9 @@
                         <td>0</td>
                         <td>33</td>
                         <td>6</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -666,8 +666,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "13",
-                 "18",
-                 "16",
+                 "17",
+                 "15",
                  "11",
                  "9"
                ]
