--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 19:05:03 2018</p>
+         Last Run: Tue Jul 24 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>1</td>
-                        <td>80</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>NNE</td>
-                        <td>57</td>
-                     </tr>
-                     <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>2</td>
-                        <td>86</td>
+                        <td>1</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>8</td>
                         <td>N</td>
-                        <td>48</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM"
            ],
            "datasets":[
@@ -93,7 +80,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "14",
                  "13"
                ]
              },
@@ -103,7 +89,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "14",
                  "13"
                ]
              }
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "08:00 PM",
              "09:00 PM"
            ],
            "datasets":[
@@ -154,8 +138,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -163,8 +146,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "86"
+                 "84"
                ]
              },
              {
@@ -172,8 +154,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "48"
+                 "55"
                ]
              }
            ]
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 19:05:03 2018</p>
+         Last Run: Tue Jul 24 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -252,7 +233,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>39</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -399,7 +380,7 @@
                  "42",
                  "44",
                  "47",
-                 "55",
+                 "56",
                  "68"
                ]
              },
@@ -429,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 19:05:03 2018</p>
+         Last Run: Tue Jul 24 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -451,8 +432,8 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>6</td>
                         <td>45</td>
                         <td>4</td>
@@ -469,8 +450,8 @@
                         <td>37</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>17</td>
+                        <td>NNW</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -478,11 +459,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -494,19 +475,19 @@
                         <td>7</td>
                         <td>11</td>
                         <td>N</td>
-                        <td>24</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
                         <td>30</td>
                         <td>6</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>23</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -552,11 +533,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -565,11 +546,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -636,7 +617,7 @@
                "data":[
                  "45",
                  "37",
-                 "33",
+                 "32",
                  "31",
                  "30"
                ]
@@ -647,10 +628,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "13",
-                 "17",
-                 "15",
-                 "24",
-                 "23"
+                 "18",
+                 "16",
+                 "26",
+                 "25"
                ]
              }
            ]
