--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 21:05:04 2018</p>
+         Last Run: Tue Jul 24 22:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>1</td>
@@ -38,14 +38,14 @@
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>43</td>
                         <td>1</td>
                         <td>11</td>
@@ -70,7 +70,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>39</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -82,7 +82,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>40</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -203,7 +203,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "1",
+                 "0",
                  "15",
                  "39",
                  "40"
@@ -217,8 +217,8 @@
                  "42",
                  "43",
                  "48",
-                 "56",
-                 "68"
+                 "55",
+                 "67"
                ]
              },
              {
@@ -226,7 +226,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
+                 "30",
                  "24",
                  "48",
                  "50",
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 24 21:05:04 2018</p>
+         Last Run: Tue Jul 24 22:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -269,10 +269,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>6</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -286,9 +286,9 @@
                         <td>0</td>
                         <td>37</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -298,9 +298,9 @@
                         <td>0</td>
                         <td>32</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -311,8 +311,8 @@
                         <td>30</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>NNE</td>
-                        <td>25</td>
+                        <td>N</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -320,9 +320,9 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>N</td>
                         <td>24</td>
                      </tr>
@@ -370,7 +370,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
                  "24",
                  "24",
@@ -383,7 +383,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
                  "24",
                  "24",
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "44",
                  "37",
                  "32",
                  "30",
-                 "30"
+                 "29"
                ]
              },
              {
@@ -465,9 +465,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "13",
-                 "18",
-                 "16",
-                 "25",
+                 "17",
+                 "15",
+                 "24",
                  "24"
                ]
              }
